tests/__snapshots__/validation-if-target-wrong-list-item-type-stderr.snap.txt
Error: Item of the 'target' list must be of type string.

  1 | // @tstyche if { target: ["5.2", 5.4, "latest"] }
    |                                  ~~~
  2 | 
  3 | import { expect, test } from "tstyche";
  4 | 

      at ./__typetests__/sample.tst.ts:1:34

